5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1834_1278.log
== TEST (2019-07-01 21:27:02) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([[0, 2, 11, 6, 15, 11, 1],
				 [2, 0, 7, 12, 4, 2, 45],
				 [11, 7, 0, 11, 8, 3, 13],
				 [6,12,11,0,10,2,1],
				 [15, 4, 8, 10, 0, 5, 13],
				 [11, 2, 3, 2, 5, 0, 14],
				 [1, 15, 13, 1, 13, 14, 0]])

p = int(input())
q = int(input())
r = 0

while c != -1:
	
	r = tab[(p//100)-1, (q//100)-1] + r
	
	r = q
	
	q = int(input())

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:27:05) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([[0, 2, 11, 6, 15, 11, 1],
				 [2, 0, 7, 12, 4, 2, 45],
				 [11, 7, 0, 11, 8, 3, 13],
				 [6,12,11,0,10,2,1],
				 [15, 4, 8, 10, 0, 5, 13],
				 [11, 2, 3, 2, 5, 0, 14],
				 [1, 15, 13, 1, 13, 14, 0]])

p = int(input())
q = int(input())
r = 0

while c != -1:
	
	r = tab[(p//100)-1, (q//100)-1] + r
	
	r = q
	
	q = int(input())

print(r)
-- EXECUTION TIME:
1.05498
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 16, in <module>
    while c != -1:
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:27:06) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([[0, 2, 11, 6, 15, 11, 1],
				 [2, 0, 7, 12, 4, 2, 45],
				 [11, 7, 0, 11, 8, 3, 13],
				 [6,12,11,0,10,2,1],
				 [15, 4, 8, 10, 0, 5, 13],
				 [11, 2, 3, 2, 5, 0, 14],
				 [1, 15, 13, 1, 13, 14, 0]])

p = int(input())
q = int(input())
r = 0

while c != -1:
	
	r = tab[(p//100)-1, (q//100)-1] + r
	
	r = q
	
	q = int(input())

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:28:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([[0, 2, 11, 6, 15, 11, 1],
				 [2, 0, 7, 12, 4, 2, 45],
				 [11, 7, 0, 11, 8, 3, 13],
				 [6,12,11,0,10,2,1],
				 [15, 4, 8, 10, 0, 5, 13],
				 [11, 2, 3, 2, 5, 0, 14],
				 [1, 15, 13, 1, 13, 14, 0]])

p = int(input(""))
q = int(input(""))
r = 0

while c != -1:
	
	r = tab[(p//100)-1, (q//100)-1] + r
	
	p = q
	
	q = int(input(""))

print(r)
-- EXECUTION TIME:
0.871607
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 16, in <module>
    while c != -1:
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:28:32) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([[0, 2, 11, 6, 15, 11, 1],
				 [2, 0, 7, 12, 4, 2, 45],
				 [11, 7, 0, 11, 8, 3, 13],
				 [6,12,11,0,10,2,1],
				 [15, 4, 8, 10, 0, 5, 13],
				 [11, 2, 3, 2, 5, 0, 14],
				 [1, 15, 13, 1, 13, 14, 0]])

p = int(input(""))
q = int(input(""))
r = 0

while q != -1:
	
	r = tab[(p//100)-1, (q//100)-1] + r
	
	p = q
	
	q = int(input(""))

print(r)
-- EXECUTION TIME:
0.817866
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
80
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:29:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([[0, 2, 11, 6, 15, 11, 1],
				 [2, 0, 7, 12, 4, 2, 15],
				 [11, 7, 0, 11, 8, 3, 13],
				 [6,12,11,0,10,2,1],
				 [15, 4, 8, 10, 0, 5, 13],
				 [11, 2, 3, 2, 5, 0, 14],
				 [1, 15, 13, 1, 13, 14, 0]])

p = int(input(""))
q = int(input(""))
r = 0

while q != -1:
	
	r = tab[(p//100)-1, (q//100)-1] + r
	
	p = q
	
	q = int(input(""))

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:29:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([[0, 2, 11, 6, 15, 11, 1],
				 [2, 0, 7, 12, 4, 2, 15],
				 [11, 7, 0, 11, 8, 3, 13],
				 [6,12,11,0,10,2,1],
				 [15, 4, 8, 10, 0, 5, 13],
				 [11, 2, 3, 2, 5, 0, 14],
				 [1, 15, 13, 1, 13, 14, 0]])

p = int(input(""))
q = int(input(""))
r = 0

while q != -1:
	
	r = tab[(p//100)-1, (q//100)-1] + r
	
	p = q
	
	q = int(input(""))

print(r)
-- EXECUTION TIME:
1.19194
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
